--- a/news.html
+++ b/news.html
@@ -37,6 +37,10 @@
 <dl class="dl-horizontal">
 <dt>Fall'25</dt>
   <dd>
+    Two papers accepted to <a href="https://wacv.thecvf.com/">WACV 2026!</a> Congrats to Shubham on his 5th paper and Akash on his first and to Thilina and Dr. Kandah for their works! Preprints to come!
+  </dd>
+<dt>Fall'25</dt>
+  <dd>
     One paper accepted to <a href="https://2025.aaclnet.org/">IJCNLP-AACL 2025!</a> Congrats to Yash Mahajan and all co-authors!
   </dd>
 <dt>Fall'25</dt>
