--- a/pubs.html
+++ b/pubs.html
@@ -38,12 +38,6 @@ arXiv:2510.09593, 2025.
 <br>
 </li> 
 <li>
-<a href="https://arxiv.org/abs/2510.09583">FSP-DETR: Few-Shot Prototypical Parasitic Ova Detection</a>.<br>
-Shubham Trehan, Udhav Ramachandran, Akash Rao, Ruth Scimeca, Sathyanarayanan N. Aakur
-arXiv:2510.09583, 2025.
-<br>
-</li> 
-<li>
 <a href="https://arxiv.org/abs/2506.05651">Hallucinate, Ground, Repeat: A Framework for Generalized Visual Relationship Detection</a>.<br>
 Shanmukha Vellamcheti, Sanjoy Kundu, Sathyanarayanan Aakur
 arXiv:2506.05651, 2025.
@@ -58,10 +52,31 @@ arXiv:2212.00015, 2022. <br>
 </ul>
 <!-- My Google Scholar <a href="https://scholar.google.com/citations?user=ALuKL5oAAAAJ&hl=en">profile</a/>. -->
 </section>
+<!-- 2026 -->
+<section>
+	<h2 style="text-align: center">2026</h2>	
+	<ul>
+		<li>
+			<a href="#">BAFLE-DCT: Bypassing Adversarial Filters via Frequency-Selective Embedding in the DCT Domain</a>.<br>
+			Thilina Mendis, Farah Kandah, Sathyanarayanan N. Aakur <br>
+			IEEE/CVF Winter Conference on the Applications of Computer Vision (WACV), 2026.
+			<br>
+		</li> 
+
+		<li>
+			<a href="https://arxiv.org/abs/2510.09583">FSP-DETR: Few-Shot Prototypical Parasitic Ova Detection</a>.<br>
+			Shubham Trehan, Udhav Ramachandran, Akash Rao, Ruth Scimeca, Sathyanarayanan N. Aakur <br>
+			IEEE/CVF Winter Conference on the Applications of Computer Vision (WACV), 2026.
+			<br>
+		</li> 
+	</ul>
+</section>
+
 <!-- 2025 -->
 <section>
 	<h2 style="text-align: center">2025</h2>	
 	<ul>
+
 		<li>
 			<a href="https://arxiv.org/abs/2402.11094">Revisiting Word Embeddings in the LLM Era</a>.<br>
 			Yash Mahajan, Matthew Freestone, Naman Bansal, Sathyanarayanan Aakur, Santu Karmaker. <br>
