update cv and news

--- a/group.html
+++ b/group.html
@@ -74,15 +74,6 @@ War Eagle!
   </div>
  -->
 
-  <div class="person">
-    <img src="./files/shubham.png" alt="thumb" />
-    <p>
-      <a href="https://www.linkedin.com/in/shubham-trehan/">Shubham Trehan</a>
-      <br />
-      Ph.D. Candidate <br/>
-      (Fall 2020 - Present)
-    </p>
-  </div>
  <div class="person">
     <img src="./files/shanmukha.jpeg" alt="thumb" />
     <p>
@@ -107,15 +98,6 @@ War Eagle!
       <a href="https://zzc0053.github.io/">Zhou Chen</a>
       <br />
       Ph.D. Candidate <br/>
-      (Summer 2024 - Present)
-    </p>
-  </div>  
-  <div class="person">
-    <img src="./files/blank.jpeg" alt="thumb" />
-    <p>
-      <a href="https://www.linkedin.com/in/khandelwaldevesh/">Devesh Khandelwal</a>
-      <br />
-      Ph.D. Student <br/>
       (Summer 2024 - Present)
     </p>
   </div>  
@@ -146,17 +128,25 @@ War Eagle!
       Ph.D. Student (AU) <br/>
       (Fall 2025 - Present)
     </p>
-  </div>  
-  
+  </div>
   <div class="person">
     <img src="./files/blank.jpeg" alt="thumb" />
     <p>
-      <a href="https://www.linkedin.com/in/yash-mahajan/">Yash Mahajan</a>
+      <a href="https://www.linkedin.com/in/khandelwaldevesh/">Devesh Khandelwal</a>
       <br />
-      Ph.D. Candidate, Co-advised with Dr. Karmaker <br/>
-      (Fall 2024 - Present)
+      Ph.D. Student <br/>
+      (Summer 2024 - Present)
     </p>
-  </div>
+  </div>  
+  <div class="person">
+    <img src="./files/blank.jpeg" alt="thumb" />
+    <p>
+      <a href="#">Tad Sligar</a>
+      <br />
+      Ph.D. Student (AU) <br/>
+      (Spring 2026 - Present)
+    </p>
+  </div>  
 
   <div class="person">
     <img src="./files/blank.jpeg" alt="thumb" />
@@ -180,6 +170,15 @@ War Eagle!
     <img src="./files/blank.jpeg" alt="thumb" />
     <p>
       <a href="#">Dane Miller</a>
+      <br />
+      B.S. Student (AU) <br/>
+      (Spring 2025 - Present)
+    </p>
+  </div>  
+  <div class="person">
+    <img src="./files/blank.jpeg" alt="thumb" />
+    <p>
+      <a href="#">Jacob Sprouse</a>
       <br />
       B.S. Student (AU) <br/>
       (Spring 2025 - Present)
@@ -233,9 +232,12 @@ War Eagle!
 </center>
 <be>
 <br/>
+<a href="#/">Shubham Trehan</a>. AU, Ph.D Fall 2020 - Fall 2025. Next: Founding Engineer at Stealth Startup. Birmingham, AL.<br/>
+<a href="#/">Yash Mahajan</a>. AU, Ph.D Fall 2022 - Fall 2025. Co-advised with <a href="https://karmake2.github.io/">Dr. Santu Karmaker</a>. Next: PostDoc at the University of Central Florida.<br/>
+<a href="#/">Tad Sligar</a>. AU, M.S. AIE Summer 2025 - Fall 2025. Next: Ph.D. Auburn University.<br/>
 <a href="#/">Sanjoy Kundu</a>. AU, Ph.D Spring 2020 - Summer 2025. Next: Visiting Assistant Professor at the University of North Carolina Greensboro.<br/>
 <a href="#/">Joe Lin</a>. AU, B.S. C.S. Spring 2024 - Spring 2025. Next: PhD at Auburn University.<br/>
-<a href="https://www.linkedin.com/in/carson-bulgin4/">Carson Bulgin</a>. AU, B.S. C.S. Fall 2023 - Spring 2025. <br/>
+<a href="https://www.linkedin.com/in/carson-bulgin4/">Carson Bulgin</a>. AU, B.S. C.S. Fall 2023 - Spring 2025. Next: Weapons System Entry Engineer, Teleios Defense Solutions, LLC.<br/>
 <a href="https://www.linkedin.com/in/jackson-young-96360022b/">Jackson Young</a>. AU, M.S. C.S. (Summer 2024 - Fall 2024).  Next: Data Scientist, Kansas City Chiefs<br/>
 <a href="https://www.linkedin.com/in/ct-dunn/">Charles "Thomas" Dunn</a>. AU, M.S. C.S. (Summer 2024 - Fall 2024). <br/>
 <a href="#">Zhou Chen</a>. AU, M.S. C.S. (Fall 2023 - Spring 2024). Next: Ph.D. at Auburn University.<br/>
