--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@ Email: san0028 -at- auburn.edu <br>
 <dl class="dl-horizontal">
 <dt>Fall'25</dt>
   <dd>
+    Two students, Shubham Trehan and Yash Mahajan, have defended their Ph.D. Dissertation! Shubham is joining a stealth-mode startup as a founding engineer and Yash is joining the Bridge-AI lab at the University of Central Florida as a PostDoc! Congrats to Shubham and Yash!
+  </dd>
+<dt>Fall'25</dt>
+  <dd>
     Two papers accepted to <a href="https://wacv.thecvf.com/">WACV 2026!</a> Congrats to Shubham on his 5th paper and Akash on his first and to Thilina and Dr. Kandah for their works! Preprints to come!
   </dd>
 
@@ -81,13 +85,9 @@ Email: san0028 -at- auburn.edu <br>
   <dd>Serving as Area Chair for <a href="https://bmvc2025.bmva.org/">BMVC 2025</a>!</dd>
 <dt>Spring'25</dt>
   <dd>Congrats to my student <a href="https://www.linkedin.com/in/john-lieb/">John Lieb</a> on winning the 2024-2025 <a href="https://our.auburn.edu/undergraduate-research-fellowship/">Auburn University Undergraduate Research Fellowship!</a></dd>
-<dt>Fall'24</dt>
-  <dd>One paper on analyzing ML for corn yield prediction accepted at <a href="https://www.sciencedirect.com/journal/smart-agricultural-technology/">Smart Agricultural Technology!</a> Congrats to <a href="https://www.linkedin.com/in/shengfang-ma-80463522a/">Shengfang Ma</a>, my former M.S. student, whose thesis drove this work! Paper can be found <a href="https://www.sciencedirect.com/science/article/pii/S2772375524002764?via%3Dihub">here.</a></dd>
-<dt>Fall'24</dt>
-  <dd>Serving as Area Chair for <a href="https://cvpr.thecvf.com//">IEEE/CVF CVPR 2025</a>, <a href="https://wacv2025.thecvf.com/">IEEE/CVF WACV 2025</a>, <a href="https://icml.cc//">ICML 2025</a>, and <a href="https://neurips.cc//">NeurIPS 2025</a>!</dd>
 </dl>
 
-<a href="news.html">More news.</a>.
+<a href="news.html">Older news.</a>.
 </section>
 
 <!-- About Me -->
@@ -134,9 +134,10 @@ This entails developing approaches that do things such as:
 <a name="teaching"></a>
 <h2 style="text-align: center">Teaching</h2>
 <ul>
+ <li class="packed">Fall 2025: <a href="https://bulletin.auburn.edu/coursesofinstruction/comp/">COMP 5970/6970 Modern Computer Vision</a>. Auburn University.</li>
  <li class="packed">Spring 2025: <a href="https://bulletin.auburn.edu/coursesofinstruction/comp/">COMP 1100 The Power of AI: Fundamentals to Applications</a>. Auburn University.</li>
  <li class="packed">Spring 2024: <a href="https://bulletin.auburn.edu/coursesofinstruction/comp/">COMP 5630/6630 Machine Learning</a>. Auburn University.</li>
- <li class="packed">Fall 2023, 2024: <a href="https://bulletin.auburn.edu/coursesofinstruction/comp/">COMP 5600/6600 Artificial Intelligence</a>. Auburn University.</li>
+ <li class="packed">Fall 2023, 2024, 2025: <a href="https://bulletin.auburn.edu/coursesofinstruction/comp/">COMP 5600/6600 Artificial Intelligence</a>. Auburn University.</li>
  <li class="packed">Fall 2020, 2021, 2022: <a href="http://catalog.okstate.edu/search/?P=CS%205783">CS 4783/5783 Machine Learning</a>. Oklahoma State University.</li>
  <li class="packed">Spring 2020, 2021, 2022, 2023: <a href="http://catalog.okstate.edu/search/?P=CS%205323">CS 5323 Design and Implementation of Operating Systems II</a>. Oklahoma State University.</li>
  <li class="packed">Summer 2019: <a href="#">COP 2512: IT Programming Fundamentals</a>. University of South Florida (USF) </li>
@@ -151,6 +152,7 @@ This entails developing approaches that do things such as:
 <h2 style="text-align: center">Talks</h2>
 <br/>
 <ul>
+<li class="packed"> Teaching AI to see the visual world and use it!, Alabama AI Exchange, Fall 2025. </li>
 <li class="packed">Active event perception for effective human-robot collaboration. 1st KAMTIC Manufacturing Technology Innovation Workshop. Spring 2025.</li>
 <li class="packed">Towards open world egocentric activity recognition from multimodal videos. Area Chair Workshop, CVPR 2024 Summer 2024.</li>
 <li class="packed">Towards Multimodal Open World Event Understanding with Neuro Symbolic Reasoning. DMS Statistics and Data Science Seminar, Auburn University. Spring 2024.</li>
