--- a/news.html
+++ b/news.html
@@ -37,6 +37,10 @@
 <dl class="dl-horizontal">
 <dt>Fall'25</dt>
   <dd>
+    Two students, Shubham Trehan and Yash Mahajan, have defended their Ph.D. Dissertation! Shubham is joining a stealth-mode startup as a founding engineer and Yash is joining the Bridge-AI lab at the University of Central Florida as a PostDoc! Congrats to Shubham and Yash!
+  </dd>
+<dt>Fall'25</dt>
+  <dd>
     Two papers accepted to <a href="https://wacv.thecvf.com/">WACV 2026!</a> Congrats to Shubham on his 5th paper and Akash on his first and to Thilina and Dr. Kandah for their works! Preprints to come!
   </dd>
 <dt>Fall'25</dt>
