--- a/pubs.html
+++ b/pubs.html
@@ -32,6 +32,18 @@
 <h2 style="text-align: center">Latest Preprints</h2>
 <ul>
 <li>
+<a href="https://arxiv.org/abs/2512.04219">Generalized Event Partonomy Inference with Structured Hierarchical Predictive Learning</a>.<br>
+Zhou Chen, Joe Lin, Sathyanarayanan N. Aakur
+arXiv:2512.04219, 2025.
+<br>
+</li> 
+<li>
+<a href="https://arxiv.org/abs/2512.04231">CRAFT-E: A Neuro-Symbolic Framework for Embodied Affordance Grounding</a>.<br>
+Zhou Chen, Joe Lin, Sathyanarayanan N. Aakur
+arXiv:2512.04231, 2025.
+<br>
+</li> 
+<li>
 <a href="https://arxiv.org/abs/2510.09593">STaTS: Structure-Aware Temporal Sequence Summarization via Statistical Window Merging</a>.<br>
 Disharee Bhowmick, Ranjith Ramanathan, Sathyanarayanan N. Aakur
 arXiv:2510.09593, 2025.
