--- a/index.html
+++ b/index.html
@@ -110,18 +110,9 @@ I received my PhD from <a target='_blank' href='https://usf.edu'>University of S
 <a name="research"></a>
 <h2 style="text-align: center">Research</h2>
 <p>
-In my research, I’m broadly interested in the intersection of computer vision, natural language processing, and psychology: I aim to build intelligent agents that understand the visual world beyond recognition (labels) or captions (sentences) without the need for explicit human supervision through expensive annotations.
-</p>
+In my research, I study open-world learning under limited supervision, with the goal of building intelligent agents that understand and reason about the visual world beyond labels or captions. Rather than relying on large amounts of annotated data, my work focuses on leveraging prior knowledge, structure, and interaction to enable robust perception and generalization.
 
-This entails developing approaches that do things such as:
-<ul style="margin-top: 5px;">
- <li>self-supervised predictive learning for video event segmentation</li>
- <li>commonsense reasoning to ground perception and prior knowledge</li>
- <li> generative modeling for building knowledge from the ground-up</li>
-</ul>
-
-<p>
- Much of my group's current work focuses on analyzing, modeling, and synthesizing complex video scenes and the semantic structure that can describe them. I also work on applying machine learning to other domains, such as IoTs We also work on use-inspired artificial intelligence research with applications in agriculture and animal diagnostics.
+This includes developing methods for event-centric and embodied visual understanding, such as self-supervised predictive learning for video, commonsense-guided grounding of perception, and generative models for acquiring knowledge from unstructured data. My group’s work is evaluated across diverse, data-scarce domains, including active vision, event understanding, genomics, agriculture, and security, to stress-test learning under real-world uncertainty.
 </p>
 
 
