--- a/pubs.html
+++ b/pubs.html
@@ -69,6 +69,12 @@ arXiv:2212.00015, 2022. <br>
 	<h2 style="text-align: center">2026</h2>	
 	<ul>
 		<li>
+			<a href="#">Augmenting Combat: Plane for Heuristic-Based Reinforcement Learning in Simplified Aerial Combat. </a><br>
+			Md Mijanur Rahman, Ayden Kemp, Sathyanarayanan Aakur, Nicoletta Fala <br>
+			AIAA Aviation Forum, 2026.<br>
+
+		</li>
+		<li>
 			<a href="#">BAFLE-DCT: Bypassing Adversarial Filters via Frequency-Selective Embedding in the DCT Domain</a>.<br>
 			Thilina Mendis, Farah Kandah, Sathyanarayanan N. Aakur <br>
 			IEEE/CVF Winter Conference on the Applications of Computer Vision (WACV), 2026.
