--- a/news.html
+++ b/news.html
@@ -35,6 +35,10 @@
 
 <br>
 <dl class="dl-horizontal">
+<dt>Spring'26</dt>
+  <dd>
+    One paper accepted to <a href="https://www.sciencedirect.com/journal/pattern-recognition-letters">Pattern Recognition Letters</a>! Congrats to  my student Disharee Bhowmick on her first paper! Preprint is <a href="https://arxiv.org/abs/2510.09593">online</a>!
+  </dd>
 <dt>Fall'25</dt>
   <dd>
     Two students, Shubham Trehan and Yash Mahajan, have defended their Ph.D. Dissertation! Shubham is joining a stealth-mode startup as a founding engineer and Yash is joining the Bridge-AI lab at the University of Central Florida as a PostDoc! Congrats to Shubham and Yash!
