--- a/pubs.html
+++ b/pubs.html
@@ -44,12 +44,6 @@ arXiv:2512.04231, 2025.
 <br>
 </li> 
 <li>
-<a href="https://arxiv.org/abs/2510.09593">STaTS: Structure-Aware Temporal Sequence Summarization via Statistical Window Merging</a>.<br>
-Disharee Bhowmick, Ranjith Ramanathan, Sathyanarayanan N. Aakur
-arXiv:2510.09593, 2025.
-<br>
-</li> 
-<li>
 <a href="https://arxiv.org/abs/2506.05651">Hallucinate, Ground, Repeat: A Framework for Generalized Visual Relationship Detection</a>.<br>
 Shanmukha Vellamcheti, Sanjoy Kundu, Sathyanarayanan Aakur
 arXiv:2506.05651, 2025.
@@ -68,6 +62,11 @@ arXiv:2212.00015, 2022. <br>
 <section>
 	<h2 style="text-align: center">2026</h2>	
 	<ul>
+		<li>
+			<a href="https://arxiv.org/abs/2510.09593">STaTS: Structure-Aware Temporal Sequence Summarization via Statistical Window Merging</a>.<br>
+			Disharee Bhowmick, Ranjith Ramanathan, Sathyanarayanan N. Aakur <br>Pattern Recognition Letters, 2026.
+			<br>
+		</li> 
 		<li>
 			<a href="#">Augmenting Combat: Plane for Heuristic-Based Reinforcement Learning in Simplified Aerial Combat. </a><br>
 			Md Mijanur Rahman, Ayden Kemp, Sathyanarayanan Aakur, Nicoletta Fala <br>
