--- a/index.html
+++ b/index.html
@@ -54,6 +54,10 @@ Email: san0028 -at- auburn.edu <br>
 <h2 style="text-align: center">Highlights and News</h2>
 <br>
 <dl class="dl-horizontal">
+<dt>Spring'26</dt>
+  <dd>
+    One paper accepted to <a href="https://www.sciencedirect.com/journal/pattern-recognition-letters">Pattern Recognition Letters</a>! Congrats to  my student Disharee Bhowmick on her first paper! Preprint is <a href="https://arxiv.org/abs/2510.09593">online</a>!
+  </dd>
 <dt>Fall'25</dt>
   <dd>
     Two students, Shubham Trehan and Yash Mahajan, have defended their Ph.D. Dissertation! Shubham is joining a stealth-mode startup as a founding engineer and Yash is joining the Bridge-AI lab at the University of Central Florida as a PostDoc! Congrats to Shubham and Yash!
@@ -81,10 +85,6 @@ Email: san0028 -at- auburn.edu <br>
   <dd>Our paper on open world egocentric action recognition has been accepted to <a href="https://iccv.thecvf.com/">IEEE/CVF International Conference on Computer Vision (ICCV)</a>! Congrats to my student <a href="https://sanjoykundu.github.io/">Sanjoy Kundu</a> for his trifecta of A* vision papers and to <a href="https://shanmukha-mail.github.io/">Shanmukha Vellamcheti</a> on his first paper! Preprint can be found <a href="https://arxiv.org/abs/2504.03948">here.</a></dd>
 <dt>Summer'25</dt>
   <dd>Our paper on acive event perception with free energy minimization has been accepted to <a href="https://www.ieee-ras.org/publications/ra-l">IEEE Robotics and Automation Letters</a>! Congrats to my student Zhou Chen on his first paper!</dd>
-<dt>Spring'25</dt>
-  <dd>Serving as Area Chair for <a href="https://bmvc2025.bmva.org/">BMVC 2025</a>!</dd>
-<dt>Spring'25</dt>
-  <dd>Congrats to my student <a href="https://www.linkedin.com/in/john-lieb/">John Lieb</a> on winning the 2024-2025 <a href="https://our.auburn.edu/undergraduate-research-fellowship/">Auburn University Undergraduate Research Fellowship!</a></dd>
 </dl>
 
 <a href="news.html">Older news.</a>.
